# tech-debt-harness-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  plan.md
executor-image/: Dockerfile
infra/: Dockerfile.orchestrator
infra/k8s/: deployment-api.yaml  job-template.yaml  networkpolicy.yaml
orchestrator/: pyproject.toml
orchestrator/src/: config.py  graph.py  repo_import.py  state.py
orchestrator/src/agents/: executor.py  gates.py  planner.py  prompts.py  terminal.py  verifier.py
orchestrator/src/api/: schemas.py  server.py
orchestrator/src/executor_adapters/: __init__.py  base.py  dryrun_adapter.py  pi_adapter.py
orchestrator/src/sandbox/: base.py  local.py  registry.py  sandbox.py
orchestrator/src/telemetry/: trace.py
orchestrator/tests/: conftest.py  test_api_dryrun.py  test_crash_resume.py  test_dryrun_adapter.py  test_graph_dryrun.py  test_pi_rpc_framing.py  test_provider_config.py  test_repo_import.py  test_sandbox.py  test_state.py  test_telemetry.py
test-fixtures/sample-repo/: README.md  pyproject.toml  requirements.txt
test-fixtures/sample-repo/app/: api.py  db.py
test-fixtures/sample-repo/tests/: test_api.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts
web/src/components/: DiffView.tsx  EscalationGate.tsx  LoopTimeline.tsx  MergeGate.tsx  PipelineView.tsx  PlanGate.tsx  RunDetail.tsx  RunList.tsx  TokenMeter.tsx
