[project]
name = "refactor-harness"
version = "0.1.0"
description = "LangGraph-orchestrated, Pi-executed, HITL-gated autonomous refactoring harness."
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",
    "pydantic>=2.7",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "websockets>=13.0",
    "httpx>=0.27",
    "anthropic>=0.50",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "email-validator>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
